# aula06_bootcamp

./: .pre-commit-config.yaml  pyproject.toml
